<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_nav_user"
            android:title="@string/nav_my_profile" />
        <item
            android:id="@+id/nav_postuler"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/postuler" />
        <item
            android:id="@+id/nav_suivi_Candidature"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/suiviCandidature" />
        <item
            android:id="@+id/nav_UserManagement"
            android:icon="?android:attr/actionModeFindDrawable"
            android:title="@string/UserManagement" />
        <item
            android:id="@+id/nav_Antennes"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/Antennes" />
        <item
            android:id="@+id/nav_Create_Antennes"
            android:icon="@android:drawable/btn_plus"
            android:title="@string/CreateAntenne" />

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_nav_sign_out"
            android:title="@string/nav_sign_out" />
    </group>
</menu>
