<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Candidature.PostulerActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_postuler_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="300dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="55dp"
        android:layout_marginTop="55dp"
        android:elevation="@dimen/card_view_elevation"
        app:cardCornerRadius="@dimen/card_view_corner_radius"

        app:layout_constraintTop_toBottomOf="@id/toolbar_postuler_activity"
        app:layout_constraintBottom_toBottomOf="parent">

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar_postuler_activity"
            android:background="@drawable/ic_background"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/my_profile_screen_content_padding">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textAlignment="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Saisissez vos informations :"
                        android:textSize="25sp"
                        android:textStyle="bold"

                        ></TextView>
                </androidx.cardview.widget.CardView>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_name_til_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/DateNaissance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/DateNaissance"
                        android:inputType="date"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_name_til_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/numerotelephone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/numtelephone"
                        android:inputType="phone"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_name_til_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/adressepostale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/adressepostale"
                        android:inputType="textPostalAddress"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_name_til_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_permis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/permis"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_et_email_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/honneurCasJudiciaire"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/honneurCasJudiciaire"
                        android:inputType="textLongMessage"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_et_mobile_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/profession"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profession"
                        android:inputType="textAutoCorrect"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_et_mobile_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/diplomeSecourisme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/diplomeSecourisme"
                        android:inputType="text"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_et_mobile_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/diplomePseFormationContinue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/diplomePseFormationContinue"
                        android:inputType="text"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_et_mobile_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/numeroDiplome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/numeroDiplome"
                        android:inputType="number"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_et_mobile_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/postPostuler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/postPostuler"
                        android:inputType="text"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_et_mobile_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/benificierDautresCompetence"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/benificierDautresCompetence"
                        android:inputType="textLongMessage"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_et_mobile_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/pourquoiNousRejoindre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pourquoiNousRejoindre"
                        android:inputType="textLongMessage"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_et_mobile_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/langueParler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/langueParler"
                        android:inputType="text"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_et_mobile_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/remarqueCommentaireQuestion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/remarqueCommentaireQuestion"
                        android:inputType="textLongMessage"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_et_mobile_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/commentAvezVousConnuProtectionCivil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/commentAvezVousConnuProtectionCivil"
                        android:inputType="textLongMessage"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>



    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_button_rounded"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:paddingBottom="@dimen/btn_paddingTopBottom"
        android:text="@string/postuler"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>