<?xml version="1.0" encoding="utf-8"?>
<!--TODO (Step 2: Create a content_main xml file.)-->
<!--START-->
<!--Move the activity_main xml file code to this file.-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background_main"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/AiderCard"
        android:layout_width="358dp"
        android:layout_height="180dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="24dp"
        android:elevation="@dimen/card_view_elevation"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="151dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Aidertitle"
                    android:textColor="@color/colorAccent"
                    android:layout_marginLeft="12dp"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:text="@string/Aider"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:textAlignment="gravity"
                    android:textSize="@dimen/authentication_description_text_size"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/SecourirCard"
        android:layout_width="358dp"
        android:layout_height="200dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        android:elevation="@dimen/card_view_elevation"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AiderCard">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="@string/Secourirtitle"
                    android:textColor="@color/colorAccent"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="12dp"
                    android:text="@string/Secourir"
                    android:textAlignment="gravity"
                    android:textSize="@dimen/authentication_description_text_size"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="12dp"
                    android:text="@string/ClickSecourir"
                    android:textAlignment="gravity"
                    android:textSize="@dimen/authentication_description_text_size"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/FormerCard"
        android:layout_width="358dp"
        android:layout_height="200dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:elevation="@dimen/card_view_elevation"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SecourirCard">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Formertitle"
                    android:textColor="@color/colorAccent"
                    android:layout_marginLeft="12dp"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/Former"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:textAlignment="gravity"
                    android:textSize="@dimen/authentication_description_text_size"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="12dp"
                    android:text="@string/ClickFormer"
                    android:textAlignment="gravity"
                    android:textSize="@dimen/authentication_description_text_size"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
    <!--END-->