<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/ic_background"
    android:gravity="center_vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView

                android:text="@string/adressepostale"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="5dp"/>
            <TextView

                android:text="@string/postPostule"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"/>
            <TextView

                android:text="@string/diplomeSecourisme"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"/>
            <TextView
                android:text="@string/StatutCandidature"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"/>

        </LinearLayout>
        <!--Zone 2 -->
        <LinearLayout
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/AdresseCandidature"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="XXX" />

            <TextView
                android:id="@+id/PostpostuleCandidature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/colorPrimary"
                android:text="carnivore" />

            <TextView
                android:id="@+id/DiplomeCandidature"
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="Email" />

            <TextView
                android:id="@+id/StatutCandidature"
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="forms" />

        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />
</FrameLayout>